CompatHelper: add new compat entry for Bessels at version 0.2, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -69,6 +69,7 @@ Accessors = "0.1"
 ArgCheck = "2"
 AstroTime = "0.6,0.7"
 BasicInterpolators = "0.6, 0.7"
+Bessels = "0.2"
 ChainRulesCore = "1"
 ComradeBase = "0.4"
 DensityInterface = "0.4"
