--- a/Project.toml
+++ b/Project.toml
@@ -91,6 +91,7 @@ RecipesBase = "1"
 Reexport = "1"
 Requires = "1"
 SpecialFunctions = "0.10, 1, 2"
+Static = "0.8"
 StaticArrays = "1"
 StatsBase = "0.31,0.32,0.33"
 StructArrays = "0.3,0.4,0.5,0.6"
