--- a/Project.toml
+++ b/Project.toml
@@ -85,6 +85,7 @@ NFFT = "0.10, 0.11, 0.12, 0.13"
 NamedTupleTools = "0.13, 0.14"
 PaddedViews = "0.5"
 ParameterHandling = "0.4"
+Polyester = "0.7"
 PrettyTables = "1, 2"
 PyCall = "^1"
 RecipesBase = "1"
