CompatHelper: add new compat entry for RectiGrids at version 0.1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -88,6 +88,7 @@ ParameterHandling = "0.4"
 PrettyTables = "1, 2"
 PyCall = "^1"
 RecipesBase = "1"
+RectiGrids = "0.1"
 Reexport = "1"
 Requires = "1"
 SpecialFunctions = "0.10, 1, 2"
