CompatHelper: add new compat entry for ForwardDiffPullbacks at version 0.2, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -79,6 +79,7 @@ FITSIO = "0.16, 0.17"
 FileIO = "1"
 FillArrays = "0.12, 0.13"
 ForwardDiff = "0.9, 0.10"
+ForwardDiffPullbacks = "0.2"
 HypercubeTransform = "0.3"
 KeywordCalls = "0.2"
 NFFT = "0.10, 0.11, 0.12, 0.13"
