--- a/lib/ComradeAHMC/Project.toml
+++ b/lib/ComradeAHMC/Project.toml
@@ -16,7 +16,7 @@ TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 [compat]
 AbstractDifferentiation = "0.4"
 AbstractMCMC = "3,4"
-AdvancedHMC = "0.3"
+AdvancedHMC = "0.3, 0.4"
 ArgCheck = "2"
 Comrade = "0.7"
 Reexport = "1"
