--- a/lib/ComradeNested/Project.toml
+++ b/lib/ComradeNested/Project.toml
@@ -7,6 +7,7 @@ version = "0.2.2"
 AbstractMCMC = "80f14c24-f653-4e6a-9b94-39d6b0f70001"
 Comrade = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
 NestedSamplers = "41ceaf6f-1696-4a54-9b49-2e7a9ec3782e"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 
