Add closure only imaging example

--- a/Project.toml
+++ b/Project.toml
@@ -68,7 +68,7 @@ FITSIO = "0.16, 0.17"
 FastBroadcast = "0.2"
 FillArrays = "0.12, 0.13"
 ForwardDiff = "0.9, 0.10"
-HypercubeTransform = "0.3"
+HypercubeTransform = "0.3, 0.4"
 NFFT = "0.10, 0.11, 0.12, 0.13"
 PDMats = "0.10, 0.11"
 PaddedViews = "0.5"
