--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -17,6 +17,7 @@ Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
 FiniteDifferences = "26cc04aa-876d-5657-8c51-4c34ba976000"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 HypercubeTransform = "9ec9aee3-0fd3-44c2-8e61-a50acc66f3c8"
+Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 MCMCDiagnosticTools = "be115224-59cd-429b-ad48-344e309966f0"
 MCMCDiagnostics = "6e857e4b-079a-58c4-aeab-bc2670384359"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
