--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ examples/Manifest.toml
 docs/src/examples/black_hole_image.md
 docs/src/examples/nonanalytic.md
 docs/src/examples/data.md
+docs/src/examples/*.md
+docs/docs
 LocalPreferences.toml
 examples/Manifest.toml
 lib/ComradeAHMC/Manifest.toml
