--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ lib/ComradeOptimization/Manifest.toml
 lib/ComradeOptimization/Manifest.toml
 lib/ComradeOptimization/Manifest.toml
 lib/ComradePigeons/Manifest.toml
+imaging_pol.md
