--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,9 +100,9 @@ jobs:
         with:
           version: '1'
       - name: Install docs dependencies
-        run: julia --project=docs -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.develop(PackageSpec(path=joinpath(pwd(), "lib/ComradeAHMC"))); Pkg.develop(PackageSpec(path=joinpath(pwd(), "lib/ComradeOptimization"))); Pkg.instantiate()'
+        run: julia --project=docs -e 'using Pkg; Pkg.develop([PackageSpec(path=pwd()), PackageSpec(path=joinpath(pwd(), "lib/ComradeAHMC")), PackageSpec(path=joinpath(pwd(), "lib/ComradeOptimization"))]); Pkg.instantiate()'
       - name: Install examples dependencies
-        run: julia --project=examples -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.develop(PackageSpec(path=joinpath(pwd(), "lib/ComradeAHMC"))); Pkg.develop(PackageSpec(path=joinpath(pwd(), "lib/ComradeOptimization"))); Pkg.instantiate()'
+        run: julia --project=examples -e 'using Pkg; Pkg.develop([PackageSpec(path=pwd()), PackageSpec(path=joinpath(pwd(), "lib/ComradeAHMC")), PackageSpec(path=joinpath(pwd(), "lib/ComradeOptimization"))]); Pkg.instantiate()'
       - run: |
           julia --project=docs -e '
             using Documenter: doctest
