--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,9 @@ jobs:
         env:
           GROUP: ${{ matrix.group }}
       - uses: julia-actions/julia-processcoverage@v1
-      - uses: codecov/codecov-action@v1
+        with:
+          directories: src,lib/ComradeOptimization/src,lib/ComradeAHMC/src,lib/ComradeDynesty/src,lib/ComradeNested/src,lib/ComradeAdaptMCMC/src
+      - uses: codecov/codecov-action@v3
         with:
           file: lcov.info
   docs:
