--- a/Project.toml
+++ b/Project.toml
@@ -76,6 +76,7 @@ ParameterHandling = "0.4"
 PrettyTables = "1, 2"
 PyCall = "1"
 RecipesBase = "1"
+RectiGrids = "0.1"
 Reexport = "1"
 SpecialFunctions = "0.10, 1, 2"
 StaticArraysCore = "1"
