--- a/Project.toml
+++ b/Project.toml
@@ -76,6 +76,7 @@ ParameterHandling = "0.4"
 PrettyTables = "1, 2"
 PyCall = "1"
 RecipesBase = "1"
+RectiGrids = "0.1"
 Reexport = "1"
 SpecialFunctions = "0.10, 1, 2"
 StaticArraysCore = "1"
@@ -83,6 +84,7 @@ StatsBase = "0.31,0.32,0.33"
 StructArrays = "0.3,0.4,0.5,0.6"
 Tables = "1"
 TransformVariables = "0.5, 0.6, 0.7"
+TypedTables = "1"
 VLBILikelihoods = "0.1"
 julia = "^1.6"
 
