--- a/Project.toml
+++ b/Project.toml
@@ -78,6 +78,7 @@ PyCall = "1"
 RecipesBase = "1"
 Reexport = "1"
 SpecialFunctions = "0.10, 1, 2"
+Static = "0.6, 0.7, 0.8"
 StaticArraysCore = "1"
 StatsBase = "0.31,0.32,0.33"
 StructArrays = "0.3,0.4,0.5,0.6"
