--- a/lib/ComradeAHMC/Project.toml
+++ b/lib/ComradeAHMC/Project.toml
@@ -9,9 +9,9 @@ AbstractMCMC = "80f14c24-f653-4e6a-9b94-39d6b0f70001"
 AdvancedHMC = "0bf59076-c3b1-5ca4-86bd-e02cd72cde3d"
 ArgCheck = "dce04be8-c92d-5529-be00-80e4d2c0e197"
 Comrade = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
+InferenceObjects = "b5cf5a8d-e756-4ee3-b014-01d49d192c00"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
-TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 
 [compat]
 AbstractDifferentiation = "0.4"
@@ -20,7 +20,6 @@ AdvancedHMC = "0.3"
 ArgCheck = "2"
 Comrade = "0.7"
 Reexport = "1"
-TypedTables = "1"
 julia = "1.7"
 
 [extras]
