--- a/lib/ComradeAdaptMCMC/Project.toml
+++ b/lib/ComradeAdaptMCMC/Project.toml
@@ -14,6 +14,7 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 AbstractMCMC = "3, 4"
 AdaptiveMCMC = "0.1"
 Comrade = "0.7"
+InferenceObjects = "0.3"
 julia = "1.7"
 
 [extras]
