--- a/lib/ComradeDynesty/Project.toml
+++ b/lib/ComradeDynesty/Project.toml
@@ -17,7 +17,10 @@ Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 AbstractMCMC = "3, 4"
 Comrade = "0.7"
 Dynesty = "0.2"
+InferenceObjects = "0.3"
 Reexport = "1"
+StatsBase = "0.33"
+Tables = "1"
 julia = "1.7"
 
 [extras]
