--- a/Project.toml
+++ b/Project.toml
@@ -84,7 +84,7 @@ StaticArraysCore = "1"
 StatsBase = "0.31,0.32,0.33"
 StructArrays = "0.3,0.4,0.5,0.6"
 Tables = "1"
-TransformVariables = "0.5, 0.6, 0.7"
+TransformVariables = "0.5, 0.6, 0.7, 0.8"
 TypedTables = "1"
 VLBILikelihoods = "0.1"
 julia = "^1.6"
