Add LogDensityProblems interface

--- a/Project.toml
+++ b/Project.toml
@@ -25,6 +25,8 @@ FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 HypercubeTransform = "9ec9aee3-0fd3-44c2-8e61-a50acc66f3c8"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+LogDensityProblems = "6fdf6af0-433a-55f7-b3ed-c6c6e0b8df7c"
+LogDensityProblemsAD = "996a588d-648d-4e1f-a8f0-a84b347e47b1"
 NFFT = "efe261a4-0d2b-5849-be55-fc731d526b0d"
 PDMats = "90014a1f-27ba-587c-ab20-58faa44d9150"
 PaddedViews = "5432bcbf-9aad-5242-b902-cca2824c8663"
@@ -49,7 +51,6 @@ TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 VLBILikelihoods = "90db92cd-0007-4c0a-8e51-dbf0782ce592"
 
 [compat]
-AbstractDifferentiation = "0.4"
 AbstractFFTs = "1"
 AbstractMCMC = "3, 4"
 Accessors = "0.1"
