--- a/lib/ComradeNested/Project.toml
+++ b/lib/ComradeNested/Project.toml
@@ -1,26 +1,22 @@
 name = "ComradeNested"
 uuid = "233675ba-9426-43ce-b06d-28ea4529d7f1"
 authors = ["Paul Tiede <ptiede91@gmail.com>"]
-version = "0.3.0"
+version = "0.2.3"
 
 [deps]
 AbstractMCMC = "80f14c24-f653-4e6a-9b94-39d6b0f70001"
 Comrade = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
-InferenceObjects = "b5cf5a8d-e756-4ee3-b014-01d49d192c00"
 NestedSamplers = "41ceaf6f-1696-4a54-9b49-2e7a9ec3782e"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
-StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
-Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
+TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 
 [compat]
 AbstractMCMC = "3, 4"
 Comrade = "0.7"
-InferenceObjects = "0.3"
 NestedSamplers = "0.8"
-StatsBase = "0.33"
-Tables = "1"
 Reexport = "1"
+TypedTables = "1"
 julia = "1.7"
 
 [extras]
