--- a/Project.toml
+++ b/Project.toml
@@ -26,7 +26,6 @@ ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 HypercubeTransform = "9ec9aee3-0fd3-44c2-8e61-a50acc66f3c8"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LogDensityProblems = "6fdf6af0-433a-55f7-b3ed-c6c6e0b8df7c"
-LogDensityProblemsAD = "996a588d-648d-4e1f-a8f0-a84b347e47b1"
 NFFT = "efe261a4-0d2b-5849-be55-fc731d526b0d"
 PDMats = "90014a1f-27ba-587c-ab20-58faa44d9150"
 PaddedViews = "5432bcbf-9aad-5242-b902-cca2824c8663"
@@ -70,6 +69,7 @@ FastBroadcast = "0.2"
 FillArrays = "0.12, 0.13"
 ForwardDiff = "0.9, 0.10"
 HypercubeTransform = "0.3, 0.4"
+LogDensityProblems = "2"
 NFFT = "0.10, 0.11, 0.12, 0.13"
 PDMats = "0.10, 0.11"
 PaddedViews = "0.5"
