--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -16,6 +16,7 @@ Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 LogDensityProblems = "6fdf6af0-433a-55f7-b3ed-c6c6e0b8df7c"
 LogDensityProblemsAD = "996a588d-648d-4e1f-a8f0-a84b347e47b1"
 MCMCDiagnosticTools = "be115224-59cd-429b-ad48-344e309966f0"
+MKL = "33e6dc65-8f57-5167-99aa-e5a354878fb2"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 OptimizationBBO = "3e6eede4-6085-4f62-9a71-46d9bc1eb92b"
 OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
@@ -34,3 +35,4 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [extras]
 CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
+FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
