--- a/Project.toml
+++ b/Project.toml
@@ -26,6 +26,7 @@ HypercubeTransform = "9ec9aee3-0fd3-44c2-8e61-a50acc66f3c8"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LogDensityProblems = "6fdf6af0-433a-55f7-b3ed-c6c6e0b8df7c"
 NFFT = "efe261a4-0d2b-5849-be55-fc731d526b0d"
+NamedTupleTools = "d9ec5142-1e00-5aa0-9d6a-321866360f50"
 PDMats = "90014a1f-27ba-587c-ab20-58faa44d9150"
 PaddedViews = "5432bcbf-9aad-5242-b902-cca2824c8663"
 ParameterHandling = "2412ca09-6db7-441c-8e3a-88d5709968c5"
@@ -61,7 +62,7 @@ ComradeBase = "0.4"
 DensityInterface = "0.4"
 Distributions = "0.24,0.25"
 DocStringExtensions = "0.6,0.7,0.8, 0.9"
-Enzyme = "0.10"
+Enzyme = "0.10, 0.11"
 FFTW = "^1"
 FITSIO = "0.16, 0.17"
 FastBroadcast = "0.2"
