--- a/Project.toml
+++ b/Project.toml
@@ -71,6 +71,7 @@ ForwardDiff = "0.9, 0.10"
 HypercubeTransform = "0.3, 0.4"
 LogDensityProblems = "2"
 NFFT = "0.10, 0.11, 0.12, 0.13"
+NamedTupleTools = "0.13,0.14"
 PDMats = "0.10, 0.11"
 PaddedViews = "0.5"
 ParameterHandling = "0.4"
