--- a/Project.toml
+++ b/Project.toml
@@ -19,6 +19,7 @@ Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
 EnzymeCore = "f151be2c-9106-41f4-ab19-57ee4f262869"
+Enzyme_jll = "7cc45869-7501-5eee-bdea-0790c847d4ef"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 FITSIO = "525bcba6-941b-5504-bd06-fd0dc1a4d2eb"
 FastBroadcast = "7034ab61-46d4-4ed7-9d0f-46aef9175898"
