--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ lib/ComradeOptimization/Manifest.toml
 lib/ComradeOptimization/Manifest.toml
 lib/ComradePigeons/Manifest.toml
 imaging_pol.md
+.CondaPkg
