--- a/lib/ComradeDynesty/Project.toml
+++ b/lib/ComradeDynesty/Project.toml
@@ -14,7 +14,7 @@ TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 [compat]
 AbstractMCMC = "3, 4"
 Comrade = "0.7"
-Dynesty = "0.2"
+Dynesty = "0.2, 0.3"
 Reexport = "1"
 TypedTables = "1"
 julia = "1.7"
