--- a/CondaPkg.toml
+++ b/CondaPkg.toml
@@ -1,16 +1,16 @@
 
 [deps]
 python = ">=3.6,<=3.10"
-astropy = ""
-ephem = ""
-future = ""
-h5py = ""
-ipython = ""
-matplotlib = ""
-networkx = ""
+# astropy = ""
+# ephem = ""
+# future = ""
+# h5py = ""
+# ipython = ""
+# matplotlib = ""
+# networkx = ""
 numpy = "<=1.23"
-pandas = ""
-scipy = ""
-scikit-image = ""
+# pandas = ""
+# scipy = ""
+# scikit-image = ""
 [pip.deps]
 ehtim = ""
