--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,19 +48,20 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           architecture: ${{ matrix.arch }}
-      - run: python -m pip install --upgrade pip
-      - run: python -m pip install numpy==1.23.1
-      - run: python -m pip install ipython requests
-      - run: python -m pip install ehtim
-      - run: python -m pip install dynesty
+      # - run: python -m pip install --upgrade pip
+      # - run: python -m pip install numpy==1.23.1
+      # - run: python -m pip install ipython requests
+      # - run: python -m pip install ehtim
+      # - run: python -m pip install dynesty
 
       - uses: julia-actions/setup-julia@v1
         with:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
       - uses: julia-actions/julia-buildpkg@v1
-        env:
-          PYTHON: python
+        # env:
+        #   PYTHON: python
+        #   LD_PRELOAD: 
       
       - uses: actions/cache@v1
         env:
