CompatHelper: bump compat for FillArrays to 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -68,7 +68,7 @@ Enzyme = "0.10, 0.11"
 FFTW = "^1"
 FITSIO = "0.16, 0.17"
 FastBroadcast = "0.2"
-FillArrays = "0.12, 0.13"
+FillArrays = "0.12, 0.13, 1"
 ForwardDiff = "0.9, 0.10"
 HypercubeTransform = "0.3, 0.4"
 LogDensityProblems = "2"
