--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install libhdf5-dev
+          sudo apt-get install --reinstall libxcb-xinerama0
       - uses: actions/checkout@v2
       - name: Setup python
         uses: actions/setup-python@v1
