--- a/.github/workflows/Documentation.yml
+++ b/.github/workflows/Documentation.yml
@@ -18,7 +18,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - run: sudo apt-get install --reinstall libxcb-xinerama0
+      - name: Install Libs
+        run: |
+          sudo apt-get update
+          sudo apt-get install libhdf5-dev
+          sudo apt-get install --reinstall libxcb-xinerama0
       - uses: actions/checkout@v2
       - name: Setup python
         uses: actions/setup-python@v1
