Try to fix gradient bug

--- a/Project.toml
+++ b/Project.toml
@@ -64,7 +64,7 @@ CondaPkg = "0.2"
 DensityInterface = "0.4"
 Distributions = "0.24,0.25"
 DocStringExtensions = "0.6,0.7,0.8, 0.9"
-Enzyme = "0.10, 0.11"
+Enzyme = "0.11"
 FFTW = "^1"
 FITSIO = "0.16, 0.17"
 FastBroadcast = "0.2"
