--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Comrade"
 uuid = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
 authors = ["Paul Tiede <ptiede91@gmail.com>"]
-version = "0.7.7"
+version = "0.7.8"
 
 [deps]
 AbstractFFTs = "621f4979-c628-5d54-868e-fcf4e3e8185c"
@@ -68,7 +68,7 @@ Enzyme = "0.11"
 FFTW = "^1"
 FITSIO = "0.16, 0.17"
 FastBroadcast = "0.2"
-FillArrays = "0.12, 0.13"
+FillArrays = "0.12, 0.13, 1"
 ForwardDiff = "0.9, 0.10"
 HypercubeTransform = "0.3, 0.4"
 LogDensityProblems = "2"
