--- a/Project.toml
+++ b/Project.toml
@@ -62,7 +62,6 @@ ComradeBase = "0.4"
 DensityInterface = "0.4"
 Distributions = "0.24,0.25"
 DocStringExtensions = "0.6,0.7,0.8, 0.9"
-EHTImaging = "0.1"
 Enzyme = "0.11"
 FFTW = "^1"
 FITSIO = "0.16, 0.17"
@@ -77,6 +76,7 @@ PDMats = "0.10, 0.11"
 PaddedViews = "0.5"
 ParameterHandling = "0.4"
 PrettyTables = "1, 2"
+Pyehtim = "0.1"
 RecipesBase = "1"
 RectiGrids = "0.1"
 Reexport = "1"
@@ -91,6 +91,9 @@ TypedTables = "1"
 VLBILikelihoods = "0.1"
 julia = "^1.6"
 
+[extensions]
+ComradeEhtimExt = "Pyehtim"
+
 [extras]
 CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
 Pyehtim = "3d61700d-6e5b-419a-8e22-9c066cf00468"
@@ -101,6 +104,3 @@ test = ["Test", "Pyehtim"]
 
 [weakdeps]
 Pyehtim = "3d61700d-6e5b-419a-8e22-9c066cf00468"
-
-[extensions]
-ComradeEhtimExt = "Pyehtim"
