--- a/Project.toml
+++ b/Project.toml
@@ -85,7 +85,7 @@ Reexport = "1"
 SpecialFunctions = "0.10, 1, 2"
 Static = "0.6, 0.7, 0.8"
 StaticArraysCore = "1"
-StatsBase = "0.31,0.32,0.33"
+StatsBase = "0.31,0.32,0.33, 0.34"
 StructArrays = "0.3,0.4,0.5,0.6"
 Tables = "1"
 TransformVariables = "0.5, 0.6, 0.7"
