Add clean model

--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ BasicInterpolators = "26cce99e-4866-4b6d-ab74-862489e035e0"
 ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 ComradeBase = "6d8c423b-a35f-4ef1-850c-862fe21f82c4"
 CondaPkg = "992eb4ea-22a4-4c89-a5bb-47a3300528ab"
+DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 DensityInterface = "b429d917-457f-4dbc-8f4c-0cc954292b1d"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
