update examples to 0.8

--- a/Project.toml
+++ b/Project.toml
@@ -94,7 +94,7 @@ VLBILikelihoods = "0.1"
 julia = "^1.6"
 
 [extensions]
-ComradeEhtimExt = "Pyehtim"
+ComradePyehtimExt = "Pyehtim"
 
 [extras]
 CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
