--- a/lib/ComradeAHMC/Project.toml
+++ b/lib/ComradeAHMC/Project.toml
@@ -19,7 +19,7 @@ TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 AbstractMCMC = "3,4"
 AdvancedHMC = "0.4"
 ArgCheck = "2"
-Comrade = "0.7"
+Comrade = "0.7, 0.8"
 DocStringExtensions = "0.8, 0.9"
 LogDensityProblems = "2"
 LogDensityProblemsAD = "1"
