--- a/lib/ComradePigeons/Project.toml
+++ b/lib/ComradePigeons/Project.toml
@@ -10,7 +10,7 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 
 [compat]
-Comrade = "0.7"
+Comrade = "0.7, 0.8"
 Reexport = "1"
 julia = "1.7"
 
