--- a/lib/ComradeOptimization/Project.toml
+++ b/lib/ComradeOptimization/Project.toml
@@ -25,7 +25,8 @@ julia = "1.7"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 OptimizationBBO = "3e6eede4-6085-4f62-9a71-46d9bc1eb92b"
 OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
+Pyehtim = "3d61700d-6e5b-419a-8e22-9c066cf00468"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "OptimizationBBO", "OptimizationOptimJL", "Distributions"]
+test = ["Test", "OptimizationBBO", "OptimizationOptimJL", "Pyehtim", "Distributions"]
