CompatHelper: add new compat entry for JLD2 at version 0.4 for package ComradeAHMC, (keep existing compat)

--- a/lib/ComradeAHMC/Project.toml
+++ b/lib/ComradeAHMC/Project.toml
@@ -23,6 +23,7 @@ AdvancedHMC = "0.4"
 ArgCheck = "2"
 Comrade = "0.7, 0.8"
 DocStringExtensions = "0.8, 0.9"
+JLD2 = "0.4"
 LogDensityProblems = "2"
 LogDensityProblemsAD = "1"
 Reexport = "1"
