--- a/Project.toml
+++ b/Project.toml
@@ -51,12 +51,6 @@ TransformVariables = "84d833dd-6860-57f9-a1a7-6da5db126cff"
 TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 VLBILikelihoods = "90db92cd-0007-4c0a-8e51-dbf0782ce592"
 
-[weakdeps]
-Pyehtim = "3d61700d-6e5b-419a-8e22-9c066cf00468"
-
-[extensions]
-ComradePyehtimExt = "Pyehtim"
-
 [compat]
 AbstractFFTs = "1"
 AbstractMCMC = "3, 4"
@@ -77,6 +71,7 @@ FastBroadcast = "0.2"
 FillArrays = "0.12, 0.13, 1"
 ForwardDiff = "0.9, 0.10"
 HypercubeTransform = "0.3, 0.4"
+ImageFiltering = "0.7"
 LogDensityProblems = "2"
 NFFT = "0.10, 0.11, 0.12, 0.13"
 NamedTupleTools = "0.13,0.14"
@@ -100,6 +95,9 @@ TypedTables = "1"
 VLBILikelihoods = "0.1"
 julia = "^1.6"
 
+[extensions]
+ComradePyehtimExt = "Pyehtim"
+
 [extras]
 CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
 Pyehtim = "3d61700d-6e5b-419a-8e22-9c066cf00468"
@@ -107,3 +105,6 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Test", "Pyehtim"]
+
+[weakdeps]
+Pyehtim = "3d61700d-6e5b-419a-8e22-9c066cf00468"
