--- a/Project.toml
+++ b/Project.toml
@@ -39,6 +39,7 @@ RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 RectiGrids = "8ac6971d-971d-971d-971d-971d5ab1a71a"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
+SkyModels = "d6343c73-7174-4e0f-bb64-562643efbeca"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 Static = "aedffcd0-7271-4cad-89d0-dc628f76c6d3"
