--- a/Project.toml
+++ b/Project.toml
@@ -67,6 +67,7 @@ AxisKeys = "0.2"
 BasicInterpolators = "0.6, 0.7"
 ChainRulesCore = "1"
 ComradeBase = "0.4"
+DelimitedFiles = "1"
 DensityInterface = "0.4"
 Distributions = "0.24,0.25"
 DocStringExtensions = "0.6,0.7,0.8, 0.9"
