--- a/Project.toml
+++ b/Project.toml
@@ -98,7 +98,7 @@ StructArrays = "0.3,0.4,0.5,0.6"
 Tables = "1"
 TransformVariables = "0.8"
 TypedTables = "1"
-VLBILikelihoods = "0.1"
+VLBILikelihoods = "^0.1.3"
 julia = "^1.6"
 
 [extras]
