--- a/Project.toml
+++ b/Project.toml
@@ -67,7 +67,7 @@ AstroTime = "0.6,0.7"
 AxisKeys = "0.2"
 BasicInterpolators = "0.6, 0.7"
 ChainRulesCore = "1"
-ComradeBase = "0.4"
+ComradeBase = "0.4, 0.5"
 DelimitedFiles = "1"
 DensityInterface = "0.4"
 Distributions = "0.24,0.25"
