--- a/lib/ComradeDynesty/Project.toml
+++ b/lib/ComradeDynesty/Project.toml
@@ -13,7 +13,7 @@ TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 
 [compat]
 AbstractMCMC = "3, 4"
-Comrade = "^0.7.5, 0.8"
+Comrade = "^0.7.5, 0.8, 0.9"
 Dynesty = "0.3"
 Reexport = "1"
 TypedTables = "1"
