tests passing locally

--- a/test/Project.toml
+++ b/test/Project.toml
@@ -26,4 +26,5 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+VLBIImagePriors = "b1ba175b-8447-452c-b961-7db2d6f7a029"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
