--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -18,6 +18,7 @@ Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 OptimizationBBO = "3e6eede4-6085-4f62-9a71-46d9bc1eb92b"
 OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+PolarizedTypes = "d3c5d4cd-a8ee-40d6-aac7-e34df5a20044"
 Pyehtim = "3d61700d-6e5b-419a-8e22-9c066cf00468"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
