--- a/.github/workflows/Documentation.yml
+++ b/.github/workflows/Documentation.yml
@@ -23,6 +23,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install libhdf5-dev
           sudo apt-get install --reinstall libxcb-xinerama0
+          sudo apt-get install qt5-default
       - uses: actions/checkout@v2
       - name: Setup python
         uses: actions/setup-python@v1
