--- a/lib/ComradeAHMC/Project.toml
+++ b/lib/ComradeAHMC/Project.toml
@@ -21,7 +21,7 @@ TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 
 [compat]
 AbstractMCMC = "3,4"
-AdvancedHMC = "0.4"
+AdvancedHMC = "0.4, 0.5"
 ArgCheck = "2"
 Comrade = "0.7, 0.8, 0.9"
 DocStringExtensions = "0.8, 0.9"
