--- a/Project.toml
+++ b/Project.toml
@@ -87,7 +87,7 @@ StructArrays = "0.3,0.4,0.5,0.6"
 Tables = "1"
 TransformVariables = "0.8"
 TypedTables = "1"
-VLBILikelihoods = "^0.1.3"
+VLBILikelihoods = "0.2"
 VLBISkyModels = "0.2"
 julia = "^1.6"
 
