--- a/Project.toml
+++ b/Project.toml
@@ -88,7 +88,7 @@ Tables = "1"
 TransformVariables = "0.8"
 TypedTables = "1"
 VLBILikelihoods = "0.2"
-VLBISkyModels = "0.2"
+VLBISkyModels = "0.2, 0.3"
 julia = "^1.6"
 
 [extras]
