update vlbi skymodels to 0.3

--- a/Project.toml
+++ b/Project.toml
@@ -66,7 +66,7 @@ DocStringExtensions = "0.6,0.7,0.8, 0.9"
 Enzyme = "0.11"
 FillArrays = "0.12, 0.13, 1"
 ForwardDiff = "0.9, 0.10"
-HypercubeTransform = "0.3, 0.4"
+HypercubeTransform = "0.4"
 LogDensityProblems = "2"
 Makie = "0.19"
 NamedTupleTools = "0.13,0.14"
@@ -88,7 +88,7 @@ Tables = "1"
 TransformVariables = "0.8"
 TypedTables = "1"
 VLBILikelihoods = "0.2"
-VLBISkyModels = "0.2"
+VLBISkyModels = "0.3"
 julia = "^1.6"
 
 [extras]
