--- a/lib/ComradeOptimization/Project.toml
+++ b/lib/ComradeOptimization/Project.toml
@@ -28,6 +28,7 @@ OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
 Pyehtim = "3d61700d-6e5b-419a-8e22-9c066cf00468"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 VLBIImagePriors = "b1ba175b-8447-452c-b961-7db2d6f7a029"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [targets]
-test = ["Test", "OptimizationBBO", "OptimizationOptimJL", "Pyehtim", "Distributions", "VLBIImagePriors"]
+test = ["Test", "OptimizationBBO", "OptimizationOptimJL", "Pyehtim", "Distributions", "VLBIImagePriors", "Zygote"]
