--- a/lib/ComradeOptimization/Project.toml
+++ b/lib/ComradeOptimization/Project.toml
@@ -18,7 +18,7 @@ Distributions = "0.24,0.25"
 ForwardDiff = "0.9, 0.10"
 Optimization = "3"
 Reexport = "1"
-SciMLBase = "1"
+SciMLBase = "1, 2"
 julia = "1.7"
 
 [extras]
