Add pigeons as an extension

--- a/Project.toml
+++ b/Project.toml
@@ -45,10 +45,12 @@ VLBISkyModels = "d6343c73-7174-4e0f-bb64-562643efbeca"
 
 [weakdeps]
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+Pigeons = "0eb8d820-af6a-4919-95ae-11206f830c31"
 Pyehtim = "3d61700d-6e5b-419a-8e22-9c066cf00468"
 
 [extensions]
 ComradeMakieExt = "Makie"
+ComradePigeonsExt = "Pigeons"
 ComradePyehtimExt = "Pyehtim"
 
 [compat]
@@ -71,6 +73,7 @@ Makie = "0.19"
 NamedTupleTools = "0.13,0.14"
 PaddedViews = "0.5"
 ParameterHandling = "0.4"
+Pigeons = "0.2"
 PolarizedTypes = "0.1"
 PrettyTables = "1, 2"
 Pyehtim = "0.1"
@@ -93,8 +96,9 @@ julia = "1.8"
 [extras]
 CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+Pigeons = "0eb8d820-af6a-4919-95ae-11206f830c31"
 Pyehtim = "3d61700d-6e5b-419a-8e22-9c066cf00468"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "Makie", "Pyehtim"]
+test = ["Test", "Makie", "Pigeons", "Pyehtim"]
