update versions for libs

--- a/lib/ComradeNested/Project.toml
+++ b/lib/ComradeNested/Project.toml
@@ -1,7 +1,7 @@
 name = "ComradeNested"
 uuid = "233675ba-9426-43ce-b06d-28ea4529d7f1"
 authors = ["Paul Tiede <ptiede91@gmail.com>"]
-version = "0.2.4"
+version = "0.2.5"
 
 [deps]
 AbstractMCMC = "80f14c24-f653-4e6a-9b94-39d6b0f70001"
@@ -12,8 +12,8 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 
 [compat]
-AbstractMCMC = "3, 4, 5"
-Comrade = "0.7, 0.8, 0.9"
+AbstractMCMC = "4, 5"
+Comrade = "0.8, 0.9"
 NestedSamplers = "0.8"
 Reexport = "1"
 Random = "1.8"
