update gitignore and loading ex

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ examples/*/Manifest.toml
 examples/*/pkg.log
 docs/build/
 docs/src/examples
+docs/src/tutorials
 /.vscode/
 /Manifest.toml
 test/Manifest.toml
