CompatHelper: bump compat for ParameterHandling to 0.5, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -72,7 +72,7 @@ LogDensityProblems = "2"
 Makie = "0.20"
 NamedTupleTools = "0.13,0.14"
 PaddedViews = "0.5"
-ParameterHandling = "0.4"
+ParameterHandling = "0.4, 0.5"
 Pigeons = "0.3, 0.4"
 PolarizedTypes = "0.1"
 PrettyTables = "1, 2"
