--- a/examples/StokesIImaging/Project.toml
+++ b/examples/StokesIImaging/Project.toml
@@ -5,7 +5,9 @@ ComradeAHMC = "a4336a5c-78bc-4363-8a90-ce3fa9d3abe4"
 ComradeOptimization = "26988f03-70df-4135-959e-06268cc6415a"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DistributionsAD = "ced4e74d-a319-5a8a-b0ac-84af2272839c"
+Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+MCMCDiagnosticTools = "be115224-59cd-429b-ad48-344e309966f0"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
@@ -18,7 +20,7 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 [compat]
 CairoMakie = "0.11"
 Comrade = "0.9"
-ComradeAHMC = "0.4"
+ComradeAHMC = "0.5"
 ComradeOptimization = "0.1"
 Distributions = "0.25"
 DistributionsAD = "0.6"
