CompatHelper: bump compat for Enzyme to 0.12, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -64,7 +64,7 @@ DensityInterface = "0.4"
 DimensionalData = "0.25, 0.26"
 Distributions = "0.24,0.25"
 DocStringExtensions = "0.6,0.7,0.8, 0.9"
-Enzyme = "0.11"
+Enzyme = "0.11, 0.12"
 FillArrays = "0.12, 0.13, 1"
 ForwardDiff = "0.9, 0.10"
 HypercubeTransform = "0.4"
