CompatHelper: bump compat for ComradeBase to 0.7, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -58,7 +58,7 @@ AbstractMCMC = "3, 4, 5"
 ArgCheck = "2"
 AstroTime = "0.6,0.7"
 ChainRulesCore = "1"
-ComradeBase = "0.6"
+ComradeBase = "0.6, 0.7"
 DelimitedFiles = "1"
 DensityInterface = "0.4"
 DimensionalData = "0.25, 0.26"
